--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-pro-sidebar": "^1.0.0",
