--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "axios": "^1.2.6",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
+    "formik-mui": "^5.0.0-alpha.0",
     "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^3.1.2",
+    "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-daum-postcode": "^3.1.1",
