--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.6",
     "date-fns": "^2.29.3",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "formik-mui": "^5.0.0-alpha.0",
     "http-proxy-middleware": "^2.0.6",
