rootReducer 수정, menu redux 수정, authority 추가 및 메뉴 적용, formik submit button type 추가

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fullcalendar/list": "^6.0.3",
     "@fullcalendar/timegrid": "^6.0.3",
     "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.122",
     "@mui/material": "^5.11.6",
     "@mui/x-data-grid": "^5.17.21",
     "@reduxjs/toolkit": "^1.9.2",
