--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.6",
+    "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "file-saver": "^2.0.5",
     "formik": "^2.2.9",
@@ -25,6 +26,7 @@
     "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^3.1.2",
     "notistack": "^2.0.8",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-daum-postcode": "^3.1.1",
