--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@fullcalendar/core": "^6.0.3",
-    "@fullcalendar/daygrid": "^6.0.3",
-    "@fullcalendar/list": "^6.0.3",
-    "@fullcalendar/timegrid": "^6.0.3",
+    "@fullcalendar/core": "^6.1.5",
+    "@fullcalendar/daygrid": "^6.1.5",
+    "@fullcalendar/interaction": "^6.1.5",
+    "@fullcalendar/list": "^6.1.5",
+    "@fullcalendar/react": "^6.1.5",
+    "@fullcalendar/timegrid": "^6.1.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.122",
     "@mui/material": "^5.11.6",
     "@mui/x-data-grid": "^5.17.21",
+    "@mui/x-date-pickers": "^6.0.3",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -23,6 +26,7 @@
     "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "formik-mui": "^5.0.0-alpha.0",
+    "formik-mui-lab": "^1.0.0",
     "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^3.1.2",
     "notistack": "^2.0.8",
